--- a/m/css/style-Leria.css
+++ b/m/css/style-Leria.css
@@ -123,7 +123,7 @@ h3 {
 }
 
 .box-le {
-    border-bottom: 0.3vh solid #F4B6C2;
+    border-bottom: 0.3vh solid #897C9A;
     margin-top: 1vh;
     margin-right: 1vh;
     height: 3.2vh;
@@ -133,7 +133,7 @@ h3 {
     font-size: 2.4vh;
     margin: 0;
     padding: 0;
-    color: #F4B6C2;
+    color: #897C9A;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -142,7 +142,7 @@ h3 {
     font-weight: 400;
     margin: 0;
     padding: 0;
-    color: #F4B6C2;
+    color: #897C9A;
     font-family: 'Poppins', sans-serif;
 }
 
