--- a/m/css/style-qui_suis-je.css
+++ b/m/css/style-qui_suis-je.css
@@ -79,7 +79,7 @@ body {
     text-align: center;
     white-space: normal;
     color: #fff;
-    background-color: #F4B6C2;
+    background-color: #897C9A;
     border-radius: 500px;
     padding: 0.8vh 1vh 0.8vh 1vh;
     border: transparent;
