--- a/data/css/style-GFA.css
+++ b/data/css/style-GFA.css
@@ -105,7 +105,7 @@ th:nth-child(3) {
 }
 
 .box-le {
-    border-bottom: 5px solid #897C9A;
+    border-bottom: 5px solid #F4B6C2;
     margin-top: 0.5vw;
     height: 4vw;
 }
@@ -114,7 +114,7 @@ th:nth-child(3) {
     font-size: 3vw;
     margin: 0;
     padding: 0;
-    color: #897C9A;
+    color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
 }
 .projet {
@@ -122,7 +122,7 @@ th:nth-child(3) {
     margin: 0;
     margin-left: 10px;
     padding: 0;
-    color: #897C9A;
+    color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
 }
 
