--- a/data/css/style-qui_suis-je.css
+++ b/data/css/style-qui_suis-je.css
@@ -109,7 +109,7 @@ body {
     text-align: center;
     padding: 0.5vw 0.5vw 1.5vw 0.5vw;
     color: #fff;
-    background-color: #897C9A;
+    background-color: #F4B6C2;
     height: 2vw;
     border: transparent;
 }
