--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -101,12 +101,12 @@ html{
     font-weight: 400;
     line-height: 1;
     border-radius: 500px;
-    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-property: background-color, border-color, color;
     transition-duration: 0.3s;
     white-space: normal;
     font-weight: 400;
     text-align: center;
-    padding: 0.6vw 0.6vw 2.2vw 0.6vw;
+    padding: 0.6vw 0.6vw 2vw 0.6vw;
     color: #fff;
     background-color: #F4B6C2;
     height: 2vw;
