--- a/m/css/style-index.css
+++ b/m/css/style-index.css
@@ -61,7 +61,7 @@ html{
     position: relative;
     writing-mode: vertical-lr;
     transform: rotate(180deg);
-    font-size: 5svw;
+    font-size: 4.6vw;
     margin: 0;
     margin-top: 1vw;
     font-weight: 700;
