page bouygues telecom fixe

--- a/data/css/style-bouygues_telecom.css
+++ b/data/css/style-bouygues_telecom.css
@@ -1,3 +1,4 @@
+/*Reset CSS presets et smooth scroll*/
 * {
     margin: 0;
 }
@@ -10,8 +11,7 @@ body {
     margin: 0;
 }
 
-
-/*Herder*/
+/*Header*/
 .header-background {
     background-color: #FFFAEF;
     height: 100vh;
@@ -53,36 +53,16 @@ body {
     display: flex;
 }
 
-.Leria {
+.header-h1 {
     font-size: 10vh;
     font-family: 'Poppins', sans-serif;
 }
 
-.btn_decouvrir_site {
-
-    padding: 0.7vw;
-    background-color: #2D3435;
-    border: 3px solid #2D3435;
-    border-radius: 50px;
-    color: white;
-    transition-duration: .3s;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 4vh;
-    font-size: 1.5vw;
-}
-
-.btn_decouvrir_site:hover {
-    background-color: transparent;
-    color: #2D3435;
-    border: 3px solid #2D3435;
-
-}
-
-/* Tableau */
+/*Tableau en bas du header*/
 .t1 {
     width: 100%;
     margin: 0 auto;
-    margin-top: 15vh;
+    margin-top: 28vh;
 }
 
 .t1 th {
@@ -123,17 +103,12 @@ th:nth-child(3) {
     text-align: left;
 }
 
-/*Image d'éolienne en dessous du tableau*/
-.img-eolienne {
-    width: 100%;
-}
-
 /*fond blanc avec padding, de projet jusqu'à la fin de wireframe*/
 .background-white {
     background-color: #ffffff;
     margin: 0;
-    padding-left: 16vw;
-    padding-right: 16vw;
+    padding-left: 15vw;
+    padding-right: 15vw;
 }
 
 /*Titre projet et autres titre de même style*/
@@ -142,6 +117,7 @@ th:nth-child(3) {
     display: flex;
     padding: 0;
     margin-top: 1vw;
+    padding-bottom: 1vw;
 }
 
 .box-le {
@@ -170,89 +146,78 @@ th:nth-child(3) {
 
 }
 
-.box-le2 {
-    border-bottom: 0.3vw solid #F4B6C2;
-    margin-top: 0.8vw;
-    height: 3.6vw;
-}
-
-.txt-le2 {
-    font-size: 2.8vw;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
-.titre_rose2 {
-    font-size: 3.5vw;
-    margin: 0;
-    margin-left: 10px;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
-/*Style du texte utilisé par exemple pour Qu'est ce que LERIA ?*/
+/*Style du texte de corp*/
 .text-corp {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.3vw;
+    font-size: 1.06vw;
     font-weight: 100;
     color: #2D3435;
     text-align: left;
-    margin-top: 2vw;
-    line-height: 1.8vw;
-    padding-bottom: 3vw;
+    line-height: 1.7vw;
 }
 
-.box-logo-leria {
+p {
+    font-family: 'Poppins', sans-serif;
+    color: #2D3435;
+    font-size: 1vw;
+}
+
+.flex_stat {
     display: flex;
-    width: 100%;
-}
-
-.logo_leria {
-    width: 30%;
-    margin: auto;
-    margin-top: 4vh;
-}
-
-
-.box-img_wireframes {
-    text-align: center;
-
-}
-
-.img_wireframes {
-    width: 60%;
-}
-
-.background_rose {
-    background-color: #FFFAEF;
-    padding-top: 1vw;
-    padding-right: 16vw;
-    padding-bottom: 3vw;
-    padding-left: 16vw;
-}
-
-.box-img-page-principale-leria {
-    display: flex;
-    margin-bottom: 5vw;
-}
-
-.img-page-principale-leria {
-    border-radius: 16px;
-    width: 60vw;
-    margin: auto;
-}
-
-.box-img-page-presentation-leria {
-    display: flex;
-    width: 100%;
     justify-content: space-between;
-    margin-bottom: 5vw;
+    padding: 2vw 6vw 2vw 6vw;
 }
 
-.img-page-presentation-leria {
+.stat,
+.stat_border {
     width: 25vw;
-    border-radius: 16px;
+    display: block;
+    text-align: center;
+}
+
+.stat_border {
+    border-left: #2D3435 0.15vw solid;
+    border-right: #2D3435 0.15vw solid;
+}
+
+.tall_stat {
+    font-size: 3vw;
+}
+.tall-pink_stat {
+    font-size: 4vw;
+    color: #F4B6C2;
+}
+
+img {
+    padding-top: 2vw;
+    padding-bottom: 2vw;
+}
+
+.empathy-map {
+    width: 90%;
+    margin-left: 5%;
+}
+
+.img-menu {
+    width: 40%;
+    margin-left: 30%;
+}
+
+.img-page-reconditionne {
+    width: 90%;
+    margin-left: 5%;
+}
+
+.img-listing {
+    width: 65%;
+    margin-left: 17.5%;
+}
+
+.img-page-produit-reconditionne {
+    width: 100%;
+}
+
+.img-page-produit-neuf-avec-reconditionne {
+    width: 40%;
+    margin-left: 30%;
 }
