--- a/data/css/footer.css
+++ b/data/css/footer.css
@@ -2,7 +2,7 @@
 footer {
     text-align: center;
     height: 18vh;
-    background-color: #2D3435;
+    background-color: #FFFAEF;
     margin-top: 2vw;
 }
 
@@ -10,23 +10,22 @@ footer {
     display: inline-block;
     outline: none;
     cursor: pointer;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
     font-weight: 400;
-    line-height: 1;
+    line-height: 1.2vw;
     border-radius: 500px;
     transition-property: background-color, border-color, color, box-shadow, filter;
     transition-duration: 0.3s;
     white-space: normal;
     font-weight: 400;
     text-align: center;
-    padding: 0.6vw 0.6vw 2vw 0.6vw;
+    padding: 0.6vw 0.7vw 1.7vw 0.7vw;
     color: #fff;
     background-color: #F4B6C2;
     height: 2vw;
     border: transparent;
-    cursor: pointer;
     border: solid 0.2vw #F4B6C2;
-    margin-top: 2vh;
+    margin-top: 2.5vh;
 }
 
 .btn-cv-footer:hover {
@@ -37,8 +36,8 @@ footer {
 .p-footer {
     font-size: 1vw;
     margin: 0;
-    padding: 1vh;
-    color: #ffffff;
+    padding: 1vw;
+    color: #000000;
 }
 
 .img-footer {
@@ -47,4 +46,5 @@ footer {
     margin: 0;
     margin-left: 1vw;
     margin-right: 1vw;
+    filter: invert(1);
 }
