font poppins sur @mthillayisnard footer

--- a/data/css/footer.css
+++ b/data/css/footer.css
@@ -34,6 +34,7 @@ footer {
 }
 
 .p-footer {
+    font-family: Poppins, Arial, Helvetica, sans-serif;
     font-size: 1vw;
     margin: 0;
     padding: 1vw;
