--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -233,7 +233,8 @@ a {
     background-color: #F4B6C2;
     color: #ffffff;
     cursor: pointer;
-    font-size: 1.5vw;
+    font-size: 1.2vw;
+    font-weight: 200;
     transition: background-color 0.3s ease;
 }
 
@@ -247,6 +248,7 @@ a {
     color: #ffffff;
     cursor: pointer;
     font-size: 1.5vw;
+    font-weight: 500;
     transition: background-color 0.3s ease;
 }
 
