--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -11,13 +11,90 @@ html{
 .fjaune {
     background-color: #FFFAEF;
     height: 100vh;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+nav {
+    width: 100%;
+    padding-top: 3vh;
+    padding-bottom: 3vh;
+    text-align: center;
+    text-decoration: none;
+}
+
+.nav-btn-txt {
+    border: none;
+    font-size: 1vw;
+    font-weight: 100;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    color: black;
+    cursor: pointer;
+    text-decoration: none;
+    background-color: transparent;
+    margin-right: 2.5vw;
+    margin-left: 2.5vw;
+}
+
+.nav-btn-txt:hover {
+    text-decoration: underline;
+}
+
+.hero-footer {
+    margin-top: 5vw;
+    width: 100%;
+    height: 5vw;
+    text-align: center;
+}
+
+.btn-cv,
+.btn-behance,
+.btn-linkedin {
+    border-radius: 50vw;
+    border: none;
+    background-color: #2D3435;
+    cursor: pointer;
+    transition-property: background-color, border-color, color, box-shadow, filter;
+    transition-duration: 0.3s;
+    margin: 1.5vw;
+    color: white;
+    font-size: 1vw;
+    text-align: center;
+    vertical-align: middle;
+}
+
+.btn-cv {
+    height: 2vw;
+    width: 5vw;
+}
+
+.btn-behance,
+.btn-linkedin {
+    height: 2vw;
+    width: 2vw;
+    line-height: 1vw;
+}
+
+.hero-footer_img1 {
+    width: 90%;
+}
+
+.hero-footer_img2 {
+    width: 80%;
+}
+
+.btn-cv:hover,
+.btn-behance:hover,
+.btn-linkedin:hover {
+    background-color: lightgray;
+    color: #2D3435;
+    cursor: pointer;
 }
 
 .container-header {
     width: 50vw;
-    margin-left: 10vw;
+    margin: 0 auto;
     height: 50vh;
-    margin-top: 30vh;
+    margin-top: 20vh;
 }
 
 .header {
@@ -49,7 +126,7 @@ html{
     padding: 0;
     margin: 0;
     margin-top: 30px;
-    font-weight: 700;
+    font-weight: 800;
     color: #2D3435;
 }
 
@@ -67,9 +144,9 @@ html{
     font-size: 1.5vw;
     margin: 0;
     margin-top: 1vw;
-    font-weight: 700;
+    font-weight: 800;
     color: #2D3435;
-    border-left: 5px solid #2D3435;
+    border-left: 0.5vw solid #2D3435;
     padding-left: 5px;
 }
 
@@ -81,9 +158,9 @@ html{
     margin-bottom: 1px;
     margin-left: 10px;
     padding: 0;
-    font-size: 6.4vw;
-    font-weight: 100;
-    line-height: 1;
+    font-size: 6.3vw;
+    font-weight: 800;
+    line-height: 1.03;
     color: #2D3435;
     font-style: normal;
 }
@@ -99,7 +176,7 @@ html{
     font-size: 1.5vw;
     font-weight: 400;
     line-height: 1;
-    border-radius: 500px;
+    border-radius: 0.6vw;
     white-space: normal;
     font-weight: 400;
     text-align: center;
@@ -113,6 +190,14 @@ html{
 
 .btn-2-acc {
     margin-left: 1.5vw;
+}
+
+.btn-behance {
+    background-image: url(/data/imgs/all/logo-behance.png);
+}
+
+.btn-linkedin {
+    background-image: url(/data/imgs/all/logo-linkedin.png);
 }
 
 .f-project {
