correction img btn behance et linkdin index

--- a/data/css/nav.css
+++ b/data/css/nav.css
@@ -31,7 +31,7 @@ nav {
 .btn-linkedin {
     border-radius: 50vw;
     border: none;
-    background-color: #2D3435;
+    background: #2D3435;
     cursor: pointer;
     transition-property: background-color, border-color, color, box-shadow, filter;
     transition-duration: 0.3s;
