hover btn footer

--- a/data/css/footer.css
+++ b/data/css/footer.css
@@ -31,7 +31,7 @@ footer {
 
 .btn-cv-footer:hover {
     color: #F4B6C2;
-    background-color: #ffffff;
+    background-color: transparent;
 }
 
 .p-footer {
