--- a/m/css/style-Leria.css
+++ b/m/css/style-Leria.css
@@ -13,10 +13,11 @@ body {
 .header-background {
     background-color: #FFFAEF;
     height: 100vh;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .header {
-    margin-top: 10vh;
+    margin-top: 5vh;
     padding-left: 5vw;
     padding-right: 5vw;
 }
@@ -25,6 +26,19 @@ body {
     display: flex;
     height: 3vh;
     padding: 0;
+}
+
+.container-down-arrow {
+    text-align: center;
+    margin-top: 20vw;
+    width: 100%;
+}
+
+.down-arrow {
+    width: 8vw;
+    position: absolute;
+    top: 94vh;
+    left: 46vw;
 }
 
 .le {
@@ -90,6 +104,7 @@ body {
 h3 {
     margin-top: 3vh;
     margin-bottom: 0.8vh;
+    text-transform: uppercase;
 }
 
 .p-bot-header {
@@ -101,12 +116,6 @@ h3 {
     line-height: 2.4vh;
 }
 
-/*Image d'éolienne en dessous du tableau*/
-.img-eolienne {
-    width: 100%;
-}
-
-/*fond blanc avec padding, de projet jusqu'à la fin de wireframe*/
 .background-white {
     background-color: #ffffff;
     margin: 0;
@@ -114,40 +123,18 @@ h3 {
     padding-right: 5vw;
 }
 
-/*Titre projet et autres titre de même style*/
-.box-h2 {
-    height: 6vh;
-    display: flex;
-    padding: 0;
-    margin-top: 4vh;
-}
-
-.box-le {
-    border-bottom: 0.3vh solid #F4B6C2;
-    margin-top: 1vh;
-    margin-right: 1vh;
-    height: 3.2vh;
-}
-
-.txt-le {
-    font-size: 2.4vh;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
 .titre_rose {
-    font-size: 4vh;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
+    margin-top: 4vh;
+    margin-bottom: 1vh;
+    font-size: 3vh;
+    font-weight: 500;
     color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
+    font-family: Poppins, sans-serif;
+    text-transform: uppercase;
 }
 
-/*Style du texte utilisé par exemple pour Qu'est ce que LERIA ?*/
-.text-corp {
+.text-corp,
+.text-corp_white {
     font-family: 'Poppins', sans-serif;
     font-size: 2vh;
     font-weight: 100;
@@ -156,6 +143,11 @@ h3 {
     margin-top: 1vh;
     line-height: 2.4vh;
     padding-bottom: 2.4vh;
+    letter-spacing: -0.5px;
+}
+
+.text-corp_white {
+    color: #fff;
 }
 
 .box-logo-leria {
@@ -180,8 +172,8 @@ h3 {
     width: 90%;
 }
 
-.background_rose {
-    background-color: #FFFAEF;
+.background_dark {
+    background-color: #2D3435;
     padding-top: 1vw;
     padding-right: 5vw;
     padding-bottom: 5vw;
@@ -197,6 +189,7 @@ h3 {
     border-radius: 3%;
     width: 100%;
     margin: auto;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .box-img-page-presentation-leria {
@@ -209,4 +202,5 @@ h3 {
 .img-page-presentation-leria {
     width: 45%;
     border-radius: 3%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
