--- a/m/css/style-Leria.css
+++ b/m/css/style-Leria.css
@@ -56,7 +56,7 @@ body {
 .create_site {
     font-family: 'Poppins', sans-serif;
     font-size: 2.5vh;
-    font-weight: 100;
+    font-weight: 400;
     letter-spacing: -0.5px;
     text-align: left;
     margin: 0;
@@ -76,22 +76,15 @@ body {
 }
 
 .btn_decouvrir_site {
-    margin-top: 2.4vh;
-    padding: 0.2vh 4vh 0.2vh 4vh;
+    margin-top: 6vw;
+    padding: 0.5vw 4vw 0.5vw 4vw;
     background-color: #2D3435;
     border: 3px solid #2D3435;
-    border-radius: 50px;
+    border-radius: 2vw;
     color: white;
-    transition: color, background-color ease;
-    transition-duration: .3s;
     font-family: 'Poppins', sans-serif;
-    font-size: 1.6vh;
-}
-
-.btn_decouvrir_site:hover {
-    background-color: transparent;
-    color: #2D3435;
-    border: 3px solid #2D3435;
+    font-size: 5vw;
+    font-weight: 300;
 }
 
 /*3 paragraphe en dessous du header*/
@@ -105,15 +98,17 @@ h3 {
     margin-top: 3vh;
     margin-bottom: 0.8vh;
     text-transform: uppercase;
+    font-weight: 500;
 }
 
 .p-bot-header {
     font-family: 'Poppins', sans-serif;
     font-size: 2vh;
-    font-weight: 100;
+    font-weight: 400;
     color: #2D3435;
     text-align: left;
-    line-height: 2.4vh;
+    line-height: normal;
+    letter-spacing: -0.5px;
 }
 
 .background-white {
@@ -183,6 +178,7 @@ h3 {
 .box-img-page-principale-leria {
     display: flex;
     margin-bottom: 5vw;
+    margin-bottom: 8vw;
 }
 
 .img-page-principale-leria {
@@ -196,7 +192,7 @@ h3 {
     display: flex;
     width: 100%;
     justify-content: space-between;
-    margin-bottom: 5vw;
+    margin-bottom: 8vw;
 }
 
 .img-page-presentation-leria {
