--- a/m/css/style-L'ACOSTE.css
+++ b/m/css/style-L'ACOSTE.css
@@ -19,7 +19,8 @@ body {
 
 .hero {
     padding-left: 7vw;
-    margin-top: 10vh;
+    margin-top: 2vh;
+    background-color: red;
 }
 
 .box-top-hero {
@@ -42,7 +43,8 @@ body {
 .hero_subtitle {
     font-family: 'Poppins', sans-serif;
     font-size: 2.5vh;
-    font-weight: 100;
+    font-weight: 400;
+    line-height: normal;
     letter-spacing: -0.5px;
     text-align: left;
     margin: 0;
@@ -74,7 +76,8 @@ h3 {
     color: #2D3435;
     text-align: left;
     margin-top: 1vh;
-    line-height: 3.5vh;
+    line-height: normal;
+    letter-spacing: -0.5px;
 }
 
 /*fond blanc avec padding, de projet jusqu'à la fin de wireframe*/
