--- a/m/css/style-L'ACOSTE.css
+++ b/m/css/style-L'ACOSTE.css
@@ -109,41 +109,26 @@ h3 {
 
 .banniere {
     width: 100%;
+    margin-bottom: 2vh;
+}
+
+.banniere-shadow {
+    width: 100%;
+    margin-bottom: 2vh;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-}
-
-.box-h2 {
-    height: 7vw;
-    display: flex;
-    padding: 0;
-    margin-top: 3vh;
-    padding-bottom: 2vh;
-}
-
-.box-le {
-    border-bottom: 0.6vw solid #F4B6C2;
-    margin-top: 1.6vw;
-    height: 6vw;
-}
-
-.txt-le {
-    font-size: 4vw;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
 }
 
 .titre_rose {
     font-size: 8vw;
-    font-weight: 100;
+    font-weight: 400;
     line-height: 10vw;
     margin: 0;
-    margin-left: 10px;
+    margin-top: 3vh;
     padding: 0;
+    padding-bottom: 2vh;
     color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
-
+    text-transform: uppercase;
 }
 
 /*Style du texte de corp*/
@@ -171,8 +156,13 @@ h3 {
     padding-bottom: 3vw;
 }
 
-.embleme-img {
-    width: 16vw;
+.embleme > img {
+    width: 30vw;
+}
+
+.embleme > p {
+    font-size: 4.5vw;
+    font-weight: 600;
 }
 
 /*Couleur pour les descriptions de chaque crocos*/
