--- a/m/css/style-L'ACOSTE.css
+++ b/m/css/style-L'ACOSTE.css
@@ -118,7 +118,8 @@ h3 {
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
-.titre_rose {
+.titre_rose,
+.subtitre_rose {
     font-size: 8vw;
     font-weight: 400;
     line-height: 10vw;
@@ -129,6 +130,10 @@ h3 {
     color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
+}
+
+.subtitre_rose {
+    text-transform: none;
 }
 
 /*Style du texte de corp*/
