--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -15,10 +15,11 @@ html{
 }
 
 .hero-footer {
-    margin-top: 5vw;
     width: 100%;
-    height: 5vw;
+    height: 5vh;
     text-align: center;
+    position: absolute;
+    top: 90vh;
 }
 
 .btn-cv,
@@ -47,6 +48,20 @@ html{
     height: 2vw;
     width: 2vw;
     line-height: 1vw;
+}
+
+.btn-behance {
+    background-image: url(../../data/imgs/all/logo-behance.png);
+    background-position: 50% 50%;
+    background-size: 70%;
+    background-repeat: no-repeat;
+}
+  
+  .btn-linkedin {
+    background-image: url(../../data/imgs/all/logo-linkedin.png);
+    background-position: 50% 35%;
+    background-size: 55%;
+    background-repeat: no-repeat;
 }
 
 .hero-footer_img1 {
