--- a/data/css/style-L'ACOSTE.css
+++ b/data/css/style-L'ACOSTE.css
@@ -19,6 +19,8 @@ body {
 
 .header {
     padding-left: 5vw;
+    display: flex;
+    align-items: center;
 }
 
 .box-top-header {
@@ -56,6 +58,11 @@ body {
 .header-h1 {
     font-size: 10vh;
     font-family: 'Poppins', sans-serif;
+}
+
+.embleme-header {
+    height: 18vh;
+    margin-left: 5vw;
 }
 
 /*Tableau en bas du header*/
