--- a/data/css/style-L'ACOSTE.css
+++ b/data/css/style-L'ACOSTE.css
@@ -163,14 +163,18 @@ th:nth-child(3) {
 }
 
 .titre_rose {
-    font-size: 3vw;
-    font-weight: 400;
-    line-height: 3vw;
-    margin: 0;
+    font-size: 2.5vw;
+    font-weight: 500;
+    line-height: 2.5vw;
+    margin-top: 10vh;
     padding: 0;
     color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
+}
+
+.subtitre {
+    
 }
 
 /*Style du texte de corp*/
@@ -180,7 +184,7 @@ th:nth-child(3) {
     font-weight: 400;
     color: #2D3435;
     text-align: left;
-    margin-top: 1vw;
+    margin-top: 1vh;
     line-height: 1.7vw;
     padding-bottom: 3vw;
 }
@@ -188,17 +192,20 @@ th:nth-child(3) {
 /*Emblème iconique*/
 .embleme {
     text-align: center;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.3vw;
-    font-weight: 500;
-    color: #2D3435;
     margin-top: 2vw;
-    line-height: 1.8vw;
     padding-bottom: 3vw;
 }
 
 .embleme-img {
     width: 16vw;
+}
+
+.embleme>p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.3vw;
+    font-weight: 600;
+    color: #2D3435;
+    line-height: 1.8vw;
 }
 
 /*Couleur pour les descriptions de chaque crocos*/
