--- a/data/css/style-Leria.css
+++ b/data/css/style-Leria.css
@@ -59,23 +59,23 @@ body {
 }
 
 .btn_decouvrir_site {
-
-    padding: 0.7vw;
     background-color: #2D3435;
-    border: 3px solid #2D3435;
-    border-radius: 50px;
-    color: white;
-    transition-duration: .3s;
-    font-family: 'Poppins', sans-serif;
-    margin-top: 4vh;
-    font-size: 1.5vw;
+    color: #fff;
+    width: 30vh;
+    height: 4.6vh;
+    text-align: center;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    font-size: 2.5vh;
+    line-height: 4vh;
+    border-radius: 0.8vh;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .btn_decouvrir_site:hover {
     background-color: transparent;
     color: #2D3435;
     border: 3px solid #2D3435;
-
 }
 
 /* Tableau */
