--- a/data/css/style-Leria.css
+++ b/data/css/style-Leria.css
@@ -14,7 +14,7 @@ body {
 /*Herder*/
 .header-background {
     background-color: #FFFAEF;
-    height: 100vh;
+    height: 72vh;
 }
 
 .header {
@@ -79,16 +79,18 @@ body {
 }
 
 /* Tableau */
+/*Tableau en bas du header*/
 .t1 {
     width: 100%;
     margin: 0 auto;
-    margin-top: 15vh;
+    margin-top: 10vh;
+    border-collapse: collapse;
 }
 
 .t1 th {
     font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 500;
     padding: 0vh 4vw 2vh 4vw;
     text-align: left;
 }
@@ -98,7 +100,7 @@ body {
     font-family: 'Poppins', sans-serif;
     vertical-align: top;
     line-height: 3.6vh;
-    font-weight: 100;
+    font-weight: 300;
     padding: 2vh 4vw 0vh 4vw;
 }
 
@@ -108,12 +110,25 @@ body {
 
 .title-table2 {
     width: 32.5vw;
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
 }
 
 .title-table3 {
     width: 15vw;
 }
 
+.title-table1,
+.title-table2,
+.title-table3 {
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.td-mid {
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
+}
 
 td:nth-child(3) {
     text-align: left;
