--- a/data/css/style-L'ACOSTE.css
+++ b/data/css/style-L'ACOSTE.css
@@ -90,14 +90,14 @@ body {
 .t1 {
     width: 100%;
     margin: 0 auto;
-    margin-top: 10vh;
+    margin-top: 6vh;
     border-collapse: collapse;
 }
 
 .t1 th {
     font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     padding: 0vh 4vw 2vh 4vw;
     text-align: left;
 }
@@ -180,6 +180,7 @@ th:nth-child(3) {
     font-size: 2vw;
     text-transform: none;
     margin-bottom: 4vh;
+    color: #2D3435;
 }
 
 /*Style du texte de corp*/
