--- a/data/css/style-Leria.css
+++ b/data/css/style-Leria.css
@@ -40,7 +40,7 @@ body {
 
 .p2-header {
     font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
+    font-size: 3.5vh;
     font-weight: 100;
     letter-spacing: -0.5px;
     text-align: left;
@@ -54,7 +54,7 @@ body {
 }
 
 .Leria {
-    font-size: 10vh;
+    font-size: 11vh;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -70,6 +70,7 @@ body {
     line-height: 4vh;
     border-radius: 0.8vh;
     transition: background-color 0.3s, color 0.3s;
+    margin-top: 3vh;
 }
 
 .btn_decouvrir_site:hover {
@@ -83,14 +84,14 @@ body {
 .t1 {
     width: 100%;
     margin: 0 auto;
-    margin-top: 10vh;
+    margin-top: 6vh;
     border-collapse: collapse;
 }
 
 .t1 th {
     font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 500;
+    font-weight: 600;
     padding: 0vh 4vw 2vh 4vw;
     text-align: left;
 }
@@ -153,65 +154,33 @@ th:nth-child(3) {
 
 /*Titre projet et autres titre de même style*/
 .box-h2 {
-    height: 10vh;
-    display: flex;
-    padding: 0;
     margin-top: 1vw;
 }
 
-.box-le {
-    border-bottom: 0.3vw solid #F4B6C2;
-    margin-top: 0.8vw;
-    height: 2.8vw;
+.titre_rose,
+.subtitre {
+    font-size: 2.5vw;
+    font-weight: 500;
+    line-height: 2.5vw;
+    margin-top: 10vh;
+    padding: 0;
+    color: #F4B6C2;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 2vh;
 }
 
-.txt-le {
+.subtitre {
     font-size: 2vw;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
-.titre_rose {
-    font-size: 3.5vw;
-    font-weight: 100;
-    line-height: 5vw;
-    margin: 0;
-    margin-left: 10px;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-
-}
-
-.box-le2 {
-    border-bottom: 0.3vw solid #F4B6C2;
-    margin-top: 0.8vw;
-    height: 3.6vw;
-}
-
-.txt-le2 {
-    font-size: 2.8vw;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
-.titre_rose2 {
-    font-size: 3.5vw;
-    margin: 0;
-    margin-left: 10px;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
+    text-transform: none;
+    margin-bottom: 4vh;
+    color: #2D3435;
 }
 
 /*Style du texte utilisé par exemple pour Qu'est ce que LERIA ?*/
 .text-corp {
     font-family: 'Poppins', sans-serif;
-    font-size: 1.3vw;
+    font-size: 1.2vw;
     font-weight: 100;
     color: #2D3435;
     text-align: left;
@@ -255,7 +224,6 @@ th:nth-child(3) {
 }
 
 .img-page-principale-leria {
-    border-radius: 16px;
     width: 60vw;
     margin: auto;
 }
@@ -267,7 +235,12 @@ th:nth-child(3) {
     margin-bottom: 5vw;
 }
 
+.img-page-presentation-leria,
+.img-page-principale-leria {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 0.8vw;
+}
+
 .img-page-presentation-leria {
     width: 25vw;
-    border-radius: 16px;
 }
